[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.52549 )

[node name="resume" type="Button" parent="."]
margin_left = 23.0
margin_top = 33.0001
margin_right = 87.0
margin_bottom = 53.0001
text = "Resume"

[node name="main_menu" type="Button" parent="."]
margin_left = 23.0
margin_top = 73.0002
margin_right = 87.0
margin_bottom = 93.0002
text = "Main Menu"

[node name="exit" type="Button" parent="."]
margin_left = 23.0
margin_top = 109.0
margin_right = 58.0
margin_bottom = 129.0
text = "Exit"
[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
